--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
+  "homepage": "https://somesettymanideep.github.io/happiness-engineer-hub/",
+  
   "name": "vite_react_shadcn_ts",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
